# vaultedge

./: .gitignore  PUBLISHING.md  README.md  package-lock.json  package.json  providers.yaml  verification.md
.github/workflows/: ci-cd.yml
apps/proxy/: package.json
apps/proxy/src/: server.ts
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/export/: page.tsx
apps/web/src/app/keys/: page.tsx
apps/web/src/app/logs/: page.tsx
apps/web/src/app/routing/: page.tsx
apps/web/src/components/layout/: Shell.tsx
apps/web/src/components/ui/: Toast.tsx
apps/web/src/lib/: store.ts
docker/: Dockerfile  README.md  docker-compose.yml
docs/: vault_encryption.md
scratch/: list_models.js  run_e2e.js  test_direct.js  verify_features.js
scripts/: release.js
sdks/go/vaultedge/: client.go  go.mod  vault.go
sdks/python/: README.md  pyproject.toml
sdks/python/vaultedge/: __init__.py  client.py  vault.py
