[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultedge"
version = "1.0.3"
description = "VaultEdge — zero-trust AI key manager SDK for Python"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai", "llm", "api-key", "vault", "openai", "security", "proxy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.urls]
Homepage = "https://vaultedge.dev"
Repository = "https://github.com/you/vaultedge"

[tool.pytest.ini_options]
asyncio_mode = "auto"
